# NeOS

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  PLAN  PLAN.md  README.md  TODO  assemble_qcow.sh  debug.gdb  kernel.c  linker.ld  partitions.sfdisk  run.sh  run_realistic.sh  startup.nsh
bootloader/: Makefile  bootloader.c  include
cmake/: toolchain-mingw64.cmake
common/include/: bootstructs.h  exestructs.h  ini.h  numbers.h
common/src/: list.c  string.c
drivers/: Makefile  build.sh  clean.sh
drivers/AHCI/: main.c
drivers/FAT-32/: fat32.h  main.c
drivers/FS/: main.c
drivers/GFX/: main.c
drivers/GOP-GFX/: GOP-GFX.drv  Makefile  main.c
drivers/HID/: main.c
drivers/PCI/: PCI.h  main.c
drivers/PS2/: main.c
drivers/PS2-KBD/: main.c
drivers/TEST1/: main.c
drivers/TEST2/: main.c
drivers/storage/: main.c
include/common/: bitmap.h  bootheaders.h  bootstructs.h  exceptions.h  exeheaders.h  exestructs.h  list.h  math.h  memory.h  panic.h  peheader.h  screen.h  types.h
include/filesystem/: gpt.h  ntfs.h
include/hardware/: gdt.h  idt.h  pci.h  ports.h
include/hardware/memory/: paging.h
include/hardware/storage/: ahci.h  atapi.h  drive.h  nvme.h
kernel/: Makefile  NeOS.def  linker.ld
kernel/include/: common  driver.h  exe.h  hardware  loaderfunctions.h  memory  neos.h  process.h  syscallimpl.h  syscalls.h
kernel/include/events/: syscallimpl.h  syscalls.h  timer.h
kernel/include/io/: io.h  syscallimpl.h  syscalls.h  timer.h
kernel/include/runtime/: driver.h  exceptions.h  exe.h  objects.h  process.h
kernel/src/: common  driver.c  exe.c  exports.c  hardware  kernel.c  loaderfunctions.c  memory  process.c  syscallimpl.c  syscalls.c  timer.c
kernel/src/events/: syscallimpl.c  syscalls.c  timer.c
kernel/src/io/: io.c  syscallasm.asm  syscallimpl.c  syscalls.c  timer.c
kernel/src/runtime/: driver.c  exceptions.c  exe.c  objects.c  process.c
lib/: KNeOS.c  KNeOS.h  Makefile  NeOS.h  NeoTypes.h  build.sh
lib/driver/: Makefile
lib/driver/include/: NeOS.h  NeoMemory.h
lib/driver/src/: KNeOS.c  list.c
lib/driver_runtime/: Makefile
lib/driver_runtime/include/: KNeOS.h  NeoCountedString.h  NeoHID.h  NeoLinkedList.h  NeoString.h
lib/driver_runtime/src/: KNeOS.c  NeoCountedString.c  NeoLinkedList.c  NeoString.c
lib/include/: KNeOS.h  NeoHID.h  NeoList.h  NeoPorts.h  NeoTypes.h
lib/kernel_runtime/include/: neos.h
lib/kernel_runtime/include/common/: cpuid.h  exestructs.h  ini.h  list.h  string.h  types.h
lib/kernel_runtime/include/memory/: heap.h  paging.h
lib/kernel_runtime/src/common/: ini.c  list.c  string.c
lib/kernel_runtime/src/memory/: bitmap.c  heap.c  paging.c
lib/src/: KNeOS.c  list.c
loader/: Makefile  linker.ld
loader/include/: neos.h
loader/include/common/: bootstructs.h  cpuid.h  exceptions.h  exestructs.h  ini.h  list.h  log.h  math.h  memory.h  numbers.h  panic.h  screen.h  string.h  types.h
loader/include/filesystem/: fat32.h  gpt.h  mbr.h  ntfs.h
loader/include/hardware/: gdt.h  idt.h  pci.h  ports.h
loader/include/hardware/storage/: ahci.h  atapi.h  drive.h  nvme.h
loader/include/memory/: bitmap.h  heap.h  list.h  paging.h
loader/src/: loader.c
loader/src/common/: exceptions.c  ini.c  list.c  log.c  screen.c  string.c
loader/src/filesystem/: fat32.c  gpt.c  ntfs.c
loader/src/hardware/: gdt.c  gdtasm.asm  idt.c  idtasm.asm  pci.c
loader/src/hardware/storage/: ahci.c  atapi.c  drive.c  nvme.c
loader/src/memory/: heap.c  list.c  paging.c
main_template/NeOS/: Drivers.cfg  Modules.cfg  NeOS.cfg
main_template/Programs/: test.c  test2.c
modules/FS/: main.c
modules/GFX/: Makefile  main.c
modules/HID/: Makefile  main.c
modules/storage/: main.c  storage.h
osdrive/: AFileWithAVeryLongName.VeryLongExtension  test.txt
osdrive/NeOS/: Modules.cfg  NeOS.cfg
osdrive/NeOS/Drivers/: Drivers.cfg
osdrive/Programs/: test.c
src/boot/: Makefile  bootloader.c
src/common/: bitmap.c  exceptions.c  list.c  memoryasm.asm  screen.c
src/hardware/: gdt.c  gdtasm.asm  idt.c  idtasm.asm  pci.c
src/hardware/memory/: paging.c
src/hardware/storage/: ahci.c  atapi.c  drive.c  nvme.c
src/kernel/: kernel.c
src/loader/: loader.c
tools/: neofs.cc  neofs.h  out.fs  stats.py  types.h
